# kenya-health-mcp

./: AGENTS.md  LICENSE  glama.json  pyproject.toml
src/kenya_health_mcp/: __init__.py  server.py
tests/: test_smoke.py
